# rax-offline-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md  build-deb.sh  install-official.sh  install.sh  update-repo.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-repo.yml  release.yml
repo/: README.md  distributions
src/: main.rs
