[package]
name = "rax"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = "0.1.139"
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
directories = "6.0.0"
ureq = "2.9"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
termimad = "0.31.1"
syntect = "5.2.0"
walkdir = "2.5.0"
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
encoding_rs = "0.8.35"
